@@ -2,6 +2,8 @@ package de.htwg.api.itinerary.service;
 
 import de.htwg.api.itinerary.mapper.ItineraryMapper;
 import de.htwg.api.itinerary.model.ItineraryDto;
+import de.htwg.api.itinerary.model.ItinerarySearchDto;
+import de.htwg.api.itinerary.model.ItinerarySearchResponseDto;
 import de.htwg.persistence.entity.Itinerary;
 import de.htwg.persistence.entity.User;
 import de.htwg.persistence.repository.ItineraryRepository;
@@ -19,7 +21,6 @@ import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.ArgumentMatchers.anyLong;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -41,6 +42,7 @@ public class ItineraryServiceTest {
     private User testUser;
     private ItineraryDto testItineraryDto;
     private Itinerary testItinerary;
+    private ItinerarySearchResponseDto testSearchResponseDto;
 
     @BeforeEach
     void setUp() {
@@ -58,6 +60,15 @@ public class ItineraryServiceTest {
                 .startDate(LocalDate.of(2024, 6, 15))
                 .shortDescription("Explore the fjords of southern Norway")
                 .detailedDescription("A wonderful family trip to explore the beautiful fjords of southern Norway. We will visit Bergen, Stavanger, and the famous Geirangerfjord.")
+                .build();
+
+        testSearchResponseDto = ItinerarySearchResponseDto.builder()
+                .title("Family Trip to Norway")
+                .destination("Norway")
+                .startDate(LocalDate.of(2024, 6, 15))
+                .shortDescription("Explore the fjords of southern Norway")
+                .detailedDescription("A wonderful family trip to explore the beautiful fjords of southern Norway. We will visit Bergen, Stavanger, and the famous Geirangerfjord.")
+                .userName("Test User")
                 .build();
 
         testItinerary = Itinerary.builder()
@@ -117,7 +128,7 @@ public class ItineraryServiceTest {
         // Then
         assertNotNull(result);
         assertEquals(1, result.size());
-        assertEquals(testItineraryDto, result.get(0));
+        assertEquals(testItineraryDto, result.getFirst());
         
         verify(itineraryRepository).findByUserId(testUserId);
         verify(itineraryMapper).toDtoList(itineraries);
@@ -138,5 +149,362 @@ public class ItineraryServiceTest {
         
         verify(itineraryRepository).findByUserId(999L);
         verify(itineraryMapper).toDtoList(List.of());
+    }
+
+    @Test
+    void testSearchItinerariesByDestination() {
+        // Given
+        ItinerarySearchDto searchDto = ItinerarySearchDto.builder()
+                .destination("Norway")
+                .build();
+
+        List<Itinerary> itineraries = List.of(testItinerary);
+        List<ItinerarySearchResponseDto> expectedDtos = List.of(testSearchResponseDto);
+
+        when(itineraryRepository.searchItineraries(
+                null, null, null, "Norway", null, null, null
+        )).thenReturn(itineraries);
+        when(itineraryMapper.toSearchResponseDtoList(itineraries)).thenReturn(expectedDtos);
+
+        // When
+        List<ItinerarySearchResponseDto> result = itineraryService.searchItineraries(searchDto);
+
+        // Then
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(testSearchResponseDto, result.getFirst());
+
+        verify(itineraryRepository).searchItineraries(
+                null, null, null, "Norway", null, null, null
+        );
+        verify(itineraryMapper).toSearchResponseDtoList(itineraries);
+    }
+
+    @Test
+    void testSearchItinerariesByUserName() {
+        // Given
+        ItinerarySearchDto searchDto = ItinerarySearchDto.builder()
+                .userName("Test User")
+                .build();
+
+        List<Itinerary> itineraries = List.of(testItinerary);
+        List<ItinerarySearchResponseDto> expectedDtos = List.of(testSearchResponseDto);
+
+        when(itineraryRepository.searchItineraries(
+                "Test User", null, null, null, null, null, null
+        )).thenReturn(itineraries);
+        when(itineraryMapper.toSearchResponseDtoList(itineraries)).thenReturn(expectedDtos);
+
+        // When
+        List<ItinerarySearchResponseDto> result = itineraryService.searchItineraries(searchDto);
+
+        // Then
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(testSearchResponseDto, result.getFirst());
+
+        verify(itineraryRepository).searchItineraries(
+                "Test User", null, null, null, null, null, null
+        );
+        verify(itineraryMapper).toSearchResponseDtoList(itineraries);
+    }
+
+    @Test
+    void testSearchItinerariesByUserEmail() {
+        // Given
+        ItinerarySearchDto searchDto = ItinerarySearchDto.builder()
+                .userEmail("test@example.com")
+                .build();
+
+        List<Itinerary> itineraries = List.of(testItinerary);
+        List<ItinerarySearchResponseDto> expectedDtos = List.of(testSearchResponseDto);
+
+        when(itineraryRepository.searchItineraries(
+                null, "test@example.com", null, null, null, null, null
+        )).thenReturn(itineraries);
+        when(itineraryMapper.toSearchResponseDtoList(itineraries)).thenReturn(expectedDtos);
+
+        // When
+        List<ItinerarySearchResponseDto> result = itineraryService.searchItineraries(searchDto);
+
+        // Then
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(testSearchResponseDto, result.getFirst());
+
+        verify(itineraryRepository).searchItineraries(
+                null, "test@example.com", null, null, null, null, null
+        );
+        verify(itineraryMapper).toSearchResponseDtoList(itineraries);
+    }
+
+    @Test
+    void testSearchItinerariesByTitle() {
+        // Given
+        ItinerarySearchDto searchDto = ItinerarySearchDto.builder()
+                .title("Family Trip")
+                .build();
+
+        List<Itinerary> itineraries = List.of(testItinerary);
+        List<ItinerarySearchResponseDto> expectedDtos = List.of(testSearchResponseDto);
+
+        when(itineraryRepository.searchItineraries(
+                null, null, "Family Trip", null, null, null, null
+        )).thenReturn(itineraries);
+        when(itineraryMapper.toSearchResponseDtoList(itineraries)).thenReturn(expectedDtos);
+
+        // When
+        List<ItinerarySearchResponseDto> result = itineraryService.searchItineraries(searchDto);
+
+        // Then
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(testSearchResponseDto, result.getFirst());
+
+        verify(itineraryRepository).searchItineraries(
+                null, null, "Family Trip", null, null, null, null
+        );
+        verify(itineraryMapper).toSearchResponseDtoList(itineraries);
+    }
+
+    @Test
+    void testSearchItinerariesByDescription() {
+        // Given
+        ItinerarySearchDto searchDto = ItinerarySearchDto.builder()
+                .description("fjords")
+                .build();
+
+        List<Itinerary> itineraries = List.of(testItinerary);
+        List<ItinerarySearchResponseDto> expectedDtos = List.of(testSearchResponseDto);
+
+        when(itineraryRepository.searchItineraries(
+                null, null, null, null, "fjords", null, null
+        )).thenReturn(itineraries);
+        when(itineraryMapper.toSearchResponseDtoList(itineraries)).thenReturn(expectedDtos);
+
+        // When
+        List<ItinerarySearchResponseDto> result = itineraryService.searchItineraries(searchDto);
+
+        // Then
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(testSearchResponseDto, result.getFirst());
+
+        verify(itineraryRepository).searchItineraries(
+                null, null, null, null, "fjords", null, null
+        );
+        verify(itineraryMapper).toSearchResponseDtoList(itineraries);
+    }
+
+    @Test
+    void testSearchItinerariesByDateRange() {
+        // Given
+        LocalDate startFrom = LocalDate.of(2024, 6, 1);
+        LocalDate startTo = LocalDate.of(2024, 12, 31);
+
+        ItinerarySearchDto searchDto = ItinerarySearchDto.builder()
+                .startDateFrom(startFrom)
+                .startDateTo(startTo)
+                .build();
+
+        List<Itinerary> itineraries = List.of(testItinerary);
+        List<ItinerarySearchResponseDto> expectedDtos = List.of(testSearchResponseDto);
+
+        when(itineraryRepository.searchItineraries(
+                null, null, null, null, null, startFrom, startTo
+        )).thenReturn(itineraries);
+        when(itineraryMapper.toSearchResponseDtoList(itineraries)).thenReturn(expectedDtos);
+
+        // When
+        List<ItinerarySearchResponseDto> result = itineraryService.searchItineraries(searchDto);
+
+        // Then
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(testSearchResponseDto, result.getFirst());
+
+        verify(itineraryRepository).searchItineraries(
+                null, null, null, null, null, startFrom, startTo
+        );
+        verify(itineraryMapper).toSearchResponseDtoList(itineraries);
+    }
+
+    @Test
+    void testSearchItinerariesWithMultipleCriteria() {
+        // Given
+        LocalDate startFrom = LocalDate.of(2024, 1, 1);
+
+        ItinerarySearchDto searchDto = ItinerarySearchDto.builder()
+                .userName("Test")
+                .destination("Norway")
+                .description("fjords")
+                .startDateFrom(startFrom)
+                .build();
+
+        List<Itinerary> itineraries = List.of(testItinerary);
+        List<ItinerarySearchResponseDto> expectedDtos = List.of(testSearchResponseDto);
+
+        when(itineraryRepository.searchItineraries(
+                "Test", null, null, "Norway", "fjords", startFrom, null
+        )).thenReturn(itineraries);
+        when(itineraryMapper.toSearchResponseDtoList(itineraries)).thenReturn(expectedDtos);
+
+        // When
+        List<ItinerarySearchResponseDto> result = itineraryService.searchItineraries(searchDto);
+
+        // Then
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(testSearchResponseDto, result.getFirst());
+
+        verify(itineraryRepository).searchItineraries(
+                "Test", null, null, "Norway", "fjords", startFrom, null
+        );
+        verify(itineraryMapper).toSearchResponseDtoList(itineraries);
+    }
+
+    @Test
+    void testSearchItinerariesWithAllCriteria() {
+        // Given
+        LocalDate startFrom = LocalDate.of(2024, 6, 1);
+        LocalDate startTo = LocalDate.of(2024, 12, 31);
+
+        ItinerarySearchDto searchDto = ItinerarySearchDto.builder()
+                .userName("Test User")
+                .userEmail("test@example.com")
+                .title("Family Trip")
+                .destination("Norway")
+                .description("fjords")
+                .startDateFrom(startFrom)
+                .startDateTo(startTo)
+                .build();
+
+        List<Itinerary> itineraries = List.of(testItinerary);
+        List<ItinerarySearchResponseDto> expectedDtos = List.of(testSearchResponseDto);
+
+        when(itineraryRepository.searchItineraries(
+                "Test User", "test@example.com", "Family Trip", "Norway", "fjords", startFrom, startTo
+        )).thenReturn(itineraries);
+        when(itineraryMapper.toSearchResponseDtoList(itineraries)).thenReturn(expectedDtos);
+
+        // When
+        List<ItinerarySearchResponseDto> result = itineraryService.searchItineraries(searchDto);
+
+        // Then
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(testSearchResponseDto, result.getFirst());
+
+        verify(itineraryRepository).searchItineraries(
+                "Test User", "test@example.com", "Family Trip", "Norway", "fjords", startFrom, startTo
+        );
+        verify(itineraryMapper).toSearchResponseDtoList(itineraries);
+    }
+
+    @Test
+    void testSearchItinerariesWithEmptyCriteria() {
+        // Given
+        ItinerarySearchDto searchDto = ItinerarySearchDto.builder().build();
+
+        List<Itinerary> itineraries = List.of(testItinerary);
+        List<ItinerarySearchResponseDto> expectedDtos = List.of(testSearchResponseDto);
+
+        when(itineraryRepository.searchItineraries(
+                null, null, null, null, null, null, null
+        )).thenReturn(itineraries);
+        when(itineraryMapper.toSearchResponseDtoList(itineraries)).thenReturn(expectedDtos);
+
+        // When
+        List<ItinerarySearchResponseDto> result = itineraryService.searchItineraries(searchDto);
+
+        // Then
+        assertNotNull(result);
+        assertEquals(1, result.size());
+        assertEquals(testSearchResponseDto, result.getFirst());
+
+        verify(itineraryRepository).searchItineraries(
+                null, null, null, null, null, null, null
+        );
+        verify(itineraryMapper).toSearchResponseDtoList(itineraries);
+    }
+
+    @Test
+    void testSearchItinerariesReturnsEmptyList() {
+        // Given
+        ItinerarySearchDto searchDto = ItinerarySearchDto.builder()
+                .destination("NonExistentPlace")
+                .build();
+
+        when(itineraryRepository.searchItineraries(
+                null, null, null, "NonExistentPlace", null, null, null
+        )).thenReturn(List.of());
+        when(itineraryMapper.toSearchResponseDtoList(List.of())).thenReturn(List.of());
+
+        // When
+        List<ItinerarySearchResponseDto> result = itineraryService.searchItineraries(searchDto);
+
+        // Then
+        assertNotNull(result);
+        assertTrue(result.isEmpty());
+
+        verify(itineraryRepository).searchItineraries(
+                null, null, null, "NonExistentPlace", null, null, null
+        );
+        verify(itineraryMapper).toSearchResponseDtoList(List.of());
+    }
+
+    @Test
+    void testSearchItinerariesReturnsMultipleResults() {
+        // Given
+        User secondUser = User.builder()
+                .id(2L)
+                .name("Second User")
+                .email("second@example.com")
+                .build();
+
+        Itinerary secondItinerary = Itinerary.builder()
+                .id(2L)
+                .title("Summer in Norway")
+                .destination("Norway")
+                .startDate(LocalDate.of(2025, 7, 1))
+                .shortDescription("Summer vacation")
+                .detailedDescription("Hiking and camping in Norwegian mountains.")
+                .user(secondUser)
+                .build();
+
+        ItinerarySearchResponseDto secondDto = ItinerarySearchResponseDto.builder()
+                .title("Summer in Norway")
+                .destination("Norway")
+                .startDate(LocalDate.of(2025, 7, 1))
+                .shortDescription("Summer vacation")
+                .detailedDescription("Hiking and camping in Norwegian mountains.")
+                .userName("Second User")
+                .build();
+
+        ItinerarySearchDto searchDto = ItinerarySearchDto.builder()
+                .destination("Norway")
+                .build();
+
+        List<Itinerary> itineraries = List.of(testItinerary, secondItinerary);
+        List<ItinerarySearchResponseDto> expectedDtos = List.of(testSearchResponseDto, secondDto);
+
+        when(itineraryRepository.searchItineraries(
+                null, null, null, "Norway", null, null, null
+        )).thenReturn(itineraries);
+        when(itineraryMapper.toSearchResponseDtoList(itineraries)).thenReturn(expectedDtos);
+
+        // When
+        List<ItinerarySearchResponseDto> result = itineraryService.searchItineraries(searchDto);
+
+        // Then
+        assertNotNull(result);
+        assertEquals(2, result.size());
+        assertTrue(result.contains(testSearchResponseDto));
+        assertTrue(result.contains(secondDto));
+
+        verify(itineraryRepository).searchItineraries(
+                null, null, null, "Norway", null, null, null
+        );
+        verify(itineraryMapper).toSearchResponseDtoList(itineraries);
     }
 }
